--- a/page2/index.html
+++ b/page2/index.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Postcard Fortune 2026 - Page2</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css" /> 
 </head>
 <body>
   <main class="stage" id="stage">
     <!-- 디자인 원본 캔버스(고정 px) -> JS가 화면에 맞게 scale -->
     <div class="design" id="design">
       <!-- 편지/말 이미지: src만 바꾸면 됨 -->
-      <img class="letter" src="assets\letter.png" alt="letter" />
-      <img class="horse" src="assets\horse.png" alt="horse" />
+      <img class="letter" src="assets/letter.png" alt="letter" />
+      <img class="horse" src="assets/horse.png" alt="horse" />
 
       <div class="title">2026, 당신은...</div>
 
