--- a/page2/index.html
+++ b/page2/index.html
@@ -12,7 +12,7 @@
     <div class="design" id="design">
       <!-- 편지/말 이미지: src만 바꾸면 됨 -->
       <img class="letter" src="assets/letter.png" alt="letter" />
-      <img class="horse" src="assets/horse.png" alt="horse" />
+      <img class="horse" id="horseBtn" src="assets/horse.png" alt="horse" />
 
       <div class="title">2026, 당신은...</div>
 
